Improve directory aesthetics and move 404 styles to own file

--- a/www/404.html
+++ b/www/404.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chuck's Server Directory</title>
   <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/404.css">
 </head>
 
-<body>
+<body id="four0fourcontainer">
     <h1 id="error">404: file not found</h1>
     <iframe src="/index.html" frameborder="no"></iframe>
 </body>
