--- a/www/index.html
+++ b/www/index.html
@@ -13,11 +13,21 @@
   <div id="directory">
     <h1>Chuck's Server Directory</h1>
     <ul>
-      <li><a href="https://nextcloud.chuckdries.com"><h2>Nextcloud</h2><span>nextcloud.chuckdries.com</span></a></li>
-      <li><a href="https://homeassistant.chuckdries.com"><h2>Home Assistant</h2><span>homeassistant.chuckdries.com</span></a></li>
-      <li><a href="https://git.chuckdries.com"><h2>Gitea</h2><span>git.chuckdries.com</span></a></li>
-      <li><a href="https://passwords.chuckdries.com"><h2>Bitwarden</h2><span>passwords.chuckdries.com</span></a></li>
-      <li><a href="https://minecraft.chuckdries.com"><h2>Minecraft map</h2><span>minecraft.chuckdries.com</span></a></li>
+      <li><a href="https://nextcloud.chuckdries.com">
+          <h2>Nextcloud</h2><span>nextcloud.chuckdries.com</span>
+        </a></li>
+      <li><a href="https://homeassistant.chuckdries.com">
+          <h2>Home Assistant</h2><span>homeassistant.chuckdries.com</span>
+        </a></li>
+      <li><a href="https://git.chuckdries.com">
+          <h2>Gitea</h2><span>git.chuckdries.com</span>
+        </a></li>
+      <li><a href="https://passwords.chuckdries.com">
+          <h2>Bitwarden</h2><span>passwords.chuckdries.com</span>
+        </a></li>
+      <li><a href="https://minecraft.chuckdries.com">
+          <h2>Minecraft map</h2><span>minecraft.chuckdries.com</span>
+        </a></li>
     </ul>
   </div>
 </body>
